<?xml version="1.0"?>
<package format="2">
  <name>omni_description</name>
  <version>0.0.0</version>
  <description>The omni_description package</description>

  <maintainer email="brian97cbn@gmail.com">Chen Bainian</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>

  <export>
  </export>
</package>
